# wealthsimple_deepsearch_extension

./: .env.example  .gitignore  Makefile  README.md  architecture.md  pyproject.toml
app/: __init__.py  agent_tools.py  cache.py  dependencies.py  main.py  prompt.py  server.py  test_yfinance_tools.py
app/agents/: __init__.py  deep_research_agent.py
app/agents/tools/: __init__.py  yfinance_tools.py
app/core/: config.py  security.py
app/db/: database.py
app/db/migrations/: __init__.py
app/models/: __init__.py  item.py  user.py
app/routers/: agent.py  health.py  items.py  news.py  notes.py  users.py
app/schemas/: __init__.py  agent.py  health.py  item.py  news.py  notes.py  user.py
app/services/: item_service.py  news_service.py  note_service.py
docs/: architecture.md  greese_monkey_gotchas.md
docs/resource/: architecture.dot
wealthsimple_injector/: add_note_button.js  architecture_injectors.md  deep_search.js  enhanced_news.js  grease_monkey.user.js  greese_monkey.add_note.js  greese_monkey.analysis_board.js  greese_monkey.notes.js  greese_monkey_gotchas.md  hide_chat.js  notes_panel.js
